crucible-concurrency/examples/cbl/threads.out.good
Failure for examples/cbl/threads.cbl:11:5: error: in main
Positive counter
